SF Primes/src/objects/Recap_Product__c.object
<CustomObject>
    <description>Product specific information on recap used by CB IFS</description>
    <fields>
        <fullName>A720_Creative_Summary_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A720 Creative Summary Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Domains__c</fullName>
        <label>Additional Domains</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_720_Contact_Email__c</fullName>
        <formula>Agency_720_Contact_Name__r.Email</formula>
        <label>Agency 720 Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_720_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency 720 Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (Agency 720 Contact Name)</relationshipLabel>
        <relationshipName>Recap_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_720_Contact_Phone__c</fullName>
        <formula>Agency_720_Contact_Name__r.Phone</formula>
        <label>Agency 720 Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience_Demographics__c</fullName>
        <inlineHelpText>Is the LMA trying to focus on a specific gender, income range, or ethnicity?</inlineHelpText>
        <label>Audience Demographics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Background</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Light Streak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature Grassland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature Ocean 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texture Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Sky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foothills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Fire Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Bends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Emids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Falls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Rim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Bend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Turns</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bing_Password__c</fullName>
        <label>Bing Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Username__c</fullName>
        <label>Bing Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing__c</fullName>
        <label>Bing</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blog_Password__c</fullName>
        <label>Blog Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_URL__c</fullName>
        <label>Blog URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blog_Username__c</fullName>
        <label>Blog Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Shop__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Body Shop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Names__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Brand Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maserati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cars_com_Password__c</fullName>
        <label>Cars.com Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars_com_Username__c</fullName>
        <label>Cars.com Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars_com__c</fullName>
        <label>Cars.com</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>City_Search_Password__c</fullName>
        <label>City Search Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Search_Username__c</fullName>
        <label>City Search Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Search__c</fullName>
        <label>City Search</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Color</label>
        <picklist>
            <controllingField>Design__c</controllingField>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daylight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endeavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excursion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find New Roads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patrol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community_Event__c</fullName>
        <inlineHelpText>If the LMA is supporting a community event please provide the date, location, and any incentives affiliated with the event.</inlineHelpText>
        <label>Community Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conquest_Makes_Models__c</fullName>
        <label>Conquest Makes/Models</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Reply_Email__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Consumer Reply Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creative_Mockup_Needed__c</fullName>
        <inlineHelpText>Do you need a custom mock up with the LMA logo and/or a custom offer?</inlineHelpText>
        <label>Creative Mockup Needed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Website_URL__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>Current Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>DBA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA1__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>DMA1</label>
        <picklist>
            <picklistValues>
                <fullName>Abilene-Sweetwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany-Schenectady-Troy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albuquerque-Santa Fe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria, LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amarillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaumont-Port Arthur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bend, OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biloxi-Gulfport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham, AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluefield-Beckley-Oak Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston (Manchester)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington-Plattsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butte-Bozeman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casper-Riverton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar Rapids-Wtrlo-IWC&amp;Dub</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMA2__c</fullName>
        <label>DMA2</label>
        <picklist>
            <picklistValues>
                <fullName>Abilene-Sweetwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany-Schenectady-Troy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albuquerque-Santa Fe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria, LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amarillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaumont-Port Arthur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bend, OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biloxi-Gulfport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham, AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluefield-Beckley-Oak Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston (Manchester)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington-Plattsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butte-Bozeman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casper-Riverton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar Rapids-Wtrlo-IWC&amp;Dub</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMA3__c</fullName>
        <label>DMA3</label>
        <picklist>
            <picklistValues>
                <fullName>Abilene-Sweetwater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany, GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany-Schenectady-Troy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albuquerque-Santa Fe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria, LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amarillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beaumont-Port Arthur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bend, OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biloxi-Gulfport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binghamton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham, AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluefield-Beckley-Oak Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston (Manchester)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlington-Plattsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butte-Bozeman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casper-Riverton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar Rapids-Wtrlo-IWC&amp;Dub</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMA_Code__c</fullName>
        <label>DMA Code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMS_Admin_Contact_Details__c</fullName>
        <formula>IF(NOT(ISBLANK( DMS_Admin_Contact_Name__r.Email )), DMS_Admin_Contact_Name__r.Email &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK(DMS_Admin_Contact_Name__r.Phone)), DMS_Admin_Contact_Name__r.Phone &amp; &quot; (Phone)&quot; &amp; BR(), &quot;&quot;) &amp; IF(NOT(ISBLANK( DMS_Admin_Contact_Name__r.MobilePhone)), DMS_Admin_Contact_Name__r.MobilePhone &amp; &quot; (Mobile)&quot;, &quot;&quot;)</formula>
        <label>DMS Admin Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Admin_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMS Admin Contact Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Recap_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMW CPO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recap Products (DMS Admin Contact Name)</relationshipLabel>
        <relationshipName>Recap_ProductsugXR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMS_Connection_Type__c</fullName>
        <label>DMS Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Modem#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMART DMS IP Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Connection__c</fullName>
        <label>DMS Connection #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_IP_Address__c</fullName>
        <label>DMS IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Login__c</fullName>
        <label>DMS Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Password_Type__c</fullName>
        <label>DMS Password - Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Password__c</fullName>
        <label>DMS Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Type_Type__c</fullName>
        <inlineHelpText>Required for Recap to reach a status of &quot;Recap Complete&quot;</inlineHelpText>
        <label>DMS Type - Type</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERA (Reynolds &amp; Reynolds)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>